Part 3 is done, but 2 is still uncompleted

--- a/Part-2/Index.html
+++ b/Part-2/Index.html
@@ -20,13 +20,23 @@
             <div class="l2">
                 <div class="yellowLittle"></div>
             </div>
+        </div>
+        <div class="l3">
             <div class="l2">
                 <div class="blueLittle"></div>
             </div>
         </div>
         <div class="l1">
-            <div class="blueSquare"></div>
-            <div class="yellowSquare"></div>
+            <div class="blueSquare">
+                <div class="yellowLittle"></div>
+                <div class="yellowLittle"></div>
+                <div class="yellowLittle"></div>
+            </div>
+            <div class="blueSquare">
+                <div class="yellowLittle"></div>
+                <div class="yellowLittle"></div>
+                <div class="yellowLittle"></div>
+            </div>
         </div>
     </div>
 </body>
