Part 3 looks pretty now

--- a/Part-3/Index.html
+++ b/Part-3/Index.html
@@ -7,11 +7,17 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <h1>Parte 3 - JavaScript</h1>
-        <input type="number" class="inputs" id="first" placeholder="Digite o primeiro valor:">
-        <input type="number" class="inputs" id="second" placeholder="Digite o segundo valor:">
-        <input type="number" class="inputs" id="third" placeholder="Digite o terceiro valor:">
-        <button onclick="Execute()">Enviar</button>
+    
+    <h1 class="texts nav-bar">Parte 3 - JavaScript</h1>
+    
+    <div class="container">
+        <div class="lilac">
+            <input type="number" class="inputs" id="first" placeholder="Digite o primeiro valor:">
+            <input type="number" class="inputs" id="second" placeholder="Digite o segundo valor:">
+            <input type="number" class="inputs" id="third" placeholder="Digite o terceiro valor:">
+            <button class="buttons" onclick="Execute()">Enviar</button>
+        </div>
+    </div>
     <script src="Script.js"></script>
 </body>
 </html>
