--- a/Part-2/Index.html
+++ b/Part-2/Index.html
@@ -28,15 +28,16 @@
         </div>
         <div class="l1">
             <div class="blueSquare">
-                <div class="yellowLittle"></div>
-                <div class="yellowLittle"></div>
-                <div class="yellowLittle"></div>
             </div>
             <div class="blueSquare">
-                <div class="yellowLittle"></div>
-                <div class="yellowLittle"></div>
-                <div class="yellowLittle"></div>
             </div>
+        </div>
+        <div class="l1 columns">
+            <div class="yellowLittle"></div>
+            <div class="yellowLittle"></div>
+            <div class="yellowLittle"></div>
+            <div class="yellowLittle"></div>
+            <div class="yellowLittle"></div>
         </div>
     </div>
 </body>
